--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,123 @@
-appdirs
-beautifulsoup4
-coverage
-gpiozero
-guizero
-matplotlib
-nudatus
-qscintilla
-qtconsole
-pgzero
-pigpio
-Pillow
-pycodestyle
-pyflakes
-pynsist
-pyqt5
-PyQtChart
-pyserial
-pytest
-pytest-cov
-pytest-random-order
-requests
-scrapy
-setuptools
-sphinx
-twine
-wheel
+alabaster==0.7.10
+altgraph==0.15
+appdirs==1.4.3
+appnope==0.1.0
+arrow==0.12.1
+asn1crypto==0.24.0
+attrs==17.4.0
+Automat==0.6.0
+Babel==2.5.3
+backcall==0.1.0
+beautifulsoup4==4.6.0
+binaryornot==0.4.4
+biplist==1.0.3
+boto3==1.7.31
+botocore==1.10.31
+briefcase==0.2.4
+certifi==2018.4.16
+cffi==1.11.5
+chardet==3.0.4
+click==6.7
+constantly==15.1.0
+cookiecutter==1.6.0
+coverage==4.5.1
+cryptography==2.2.2
+cssselect==1.0.3
+cycler==0.10.0
+decorator==4.3.0
+dmgbuild==1.3.2
+docutils==0.14
+ds-store==1.1.2
+ecdsa==0.13
+esptool==2.3.1
+future==0.16.0
+gpiozero==1.4.1
+guizero==0.5.0
+hyperlink==18.0.0
+idna==2.6
+imagesize==1.0.0
+incremental==17.5.0
+ipykernel==4.8.2
+ipython==6.3.1
+ipython-genutils==0.2.0
+jedi==0.12.0
+Jinja2==2.10
+jinja2-time==0.2.0
+jmespath==0.9.3
+jupyter-client==5.2.3
+jupyter-core==4.4.0
+kiwisolver==1.0.1
+lxml==4.2.1
+mac-alias==2.0.7
+macholib==1.9
+MarkupSafe==1.0
+matplotlib==2.2.2
+more-itertools==4.1.0
+nudatus==0.0.2
+numpy==1.14.2
+packaging==17.1
+parsel==1.4.0
+parso==0.2.0
+pefile==2017.11.5
+pexpect==4.5.0
+pgzero==1.2
+pickleshare==0.7.4
+pigpio==1.40.post1
+Pillow==5.1.0
+pkginfo==1.4.2
+pluggy==0.6.0
+poyo==0.4.1
+prompt-toolkit==1.0.15
+ptyprocess==0.5.2
+py==1.5.3
+pyaes==1.6.1
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
+pycodestyle==2.4.0
+pycparser==2.18
+PyDispatcher==2.0.5
+pyflakes==1.6.0
+pygame==1.9.3
+Pygments==2.2.0
+PyInstaller==3.3.1
+pynsist==2.1
+pyOpenSSL==17.5.0
+pyparsing==2.2.0
+PyQt5==5.10.1
+PyQtChart==5.10.1
+pyserial==3.4
+pytest==3.5.0
+pytest-cov==2.5.1
+pytest-faulthandler==1.5.0
+pytest-random-order==0.6.0
+python-dateutil==2.7.2
+pytz==2018.4
+pyzmq==17.0.0
+QScintilla==2.10.4
+qtconsole==4.3.1
+queuelib==1.5.0
+requests==2.18.4
+requests-download==0.1.2
+requests-toolbelt==0.8.0
+s3transfer==0.1.13
+Scrapy==1.5.0
+service-identity==17.0.0
+simplegeneric==0.8.1
+sip==4.19.8
+six==1.11.0
+snowballstemmer==1.2.1
+Sphinx==1.7.2
+sphinxcontrib-websupport==1.0.1
+tornado==5.0.2
+tqdm==4.23.0
+traitlets==4.3.2
+twine==1.11.0
+Twisted==17.9.0
+urllib3==1.22
+voc==0.1.5
+w3lib==1.19.0
+wcwidth==0.1.7
+whichcraft==0.4.1
+win-cli-launchers==0.1
+yarg==0.1.9
+zope.interface==4.4.3
